// Copyright 2025 Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package agntcy.identity.core.v1alpha1;

import "agntcy/identity-saas/core/v1alpha1/id.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/identity-saas/api/server/agntcy/identity-saas/core/v1alpha1;identity_core_sdk_go";

// A Identity Issuer
message Issuer {
  // The organization of the issuer
  optional string organization = 1;

  // The sub organization of the issuer
  optional string sub_organization = 2;

  // The common name of the issuer
  // Could be a FQDN or a FQDA
  optional string common_name = 3;

  // This will be set to true when issuer provides a valid proof of ownership
  // of the common name on registration
  optional bool verified = 6;

  // This field is optional
  // The keys of the issuer in JWK format
  // The public key is used to verify the signature of the different claims
  optional .agntcy.identity.core.v1alpha1.Jwk public_key = 4;

  // This field is optional
  // The private key of the issuer in JWK format
  optional .agntcy.identity.core.v1alpha1.Jwk private_key = 5;
}
